parser/JackParser.py
# Generated from Jack.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class JackParser ( Parser ):

    grammarFileName = "Jack.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'constructor'", "'function'", 
                     "'method'", "'field'", "'static'", "'var'", "'int'", 
                     "'char'", "'boolean'", "'void'", "'true'", "'false'", 
                     "'null'", "'this'", "'let'", "'do'", "'if'", "'else'", 
                     "'while'", "'return'", "'{'", "'}'", "'('", "')'", 
                     "'['", "']'", "'.'", "','", "';'", "'+'", "'-'", "'*'", 
                     "'/'", "'&'", "'|'", "'<'", "'>'", "'='", "'~'" ]

    symbolicNames = [ "<INVALID>", "CLASS", "CONSTRUCTOR", "FUNCTION", "METHOD", 
                      "FIELD", "STATIC", "VAR", "INT", "CHAR", "BOOLEAN", 
                      "VOID", "TRUE", "FALSE", "NULL", "THIS", "LET", "DO", 
                      "IF", "ELSE", "WHILE", "RETURN", "LBRACE", "RBRACE", 
                      "LPAREN", "RPAREN", "LBRACK", "RBRACK", "DOT", "COMMA", 
                      "SEMI", "ADD", "SUB", "MUL", "DIV", "AND", "OR", "LT", 
                      "GT", "EQ", "NOT", "INTEGER", "STRING", "IDENTIFIER", 
                      "API_COMMENT", "COMMENT", "LINE_COMMENT", "WS" ]

    RULE_program = 0
    RULE_classDec = 1
    RULE_className = 2
    RULE_classVarDec = 3
    RULE_varName = 4
    RULE_subRoutineDec = 5
    RULE_subroutineName = 6
    RULE_parameterList = 7
    RULE_subroutineBody = 8
    RULE_varDec = 9
    RULE_typedVariable = 10
    RULE_typeName = 11
    RULE_statements = 12
    RULE_statement = 13
    RULE_letStatement = 14
    RULE_ifStatement = 15
    RULE_whileStatement = 16
    RULE_doStatement = 17
    RULE_returnStatement = 18
    RULE_expression = 19
    RULE_term = 20
    RULE_subroutineCall = 21
    RULE_expressionList = 22
    RULE_op = 23
    RULE_unaryOp = 24
    RULE_keywordConstant = 25

    ruleNames =  [ "program", "classDec", "className", "classVarDec", "varName", 
                   "subRoutineDec", "subroutineName", "parameterList", "subroutineBody", 
                   "varDec", "typedVariable", "typeName", "statements", 
                   "statement", "letStatement", "ifStatement", "whileStatement", 
                   "doStatement", "returnStatement", "expression", "term", 
                   "subroutineCall", "expressionList", "op", "unaryOp", 
                   "keywordConstant" ]

    EOF = Token.EOF
    CLASS=1
    CONSTRUCTOR=2
    FUNCTION=3
    METHOD=4
    FIELD=5
    STATIC=6
    VAR=7
    INT=8
    CHAR=9
    BOOLEAN=10
    VOID=11
    TRUE=12
    FALSE=13
    NULL=14
    THIS=15
    LET=16
    DO=17
    IF=18
    ELSE=19
    WHILE=20
    RETURN=21
    LBRACE=22
    RBRACE=23
    LPAREN=24
    RPAREN=25
    LBRACK=26
    RBRACK=27
    DOT=28
    COMMA=29
    SEMI=30
    ADD=31
    SUB=32
    MUL=33
    DIV=34
    AND=35
    OR=36
    LT=37
    GT=38
    EQ=39
    NOT=40
    INTEGER=41
    STRING=42
    IDENTIFIER=43
    API_COMMENT=44
    COMMENT=45
    LINE_COMMENT=46
    WS=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDec(self):
            return self.getTypedRuleContext(JackParser.ClassDecContext,0)


        def EOF(self):
            return self.getToken(JackParser.EOF, 0)

        def getRuleIndex(self):
            return JackParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = JackParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.classDec()
            self.state = 53
            self.match(JackParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(JackParser.CLASS, 0)

        def className(self):
            return self.getTypedRuleContext(JackParser.ClassNameContext,0)


        def LBRACE(self):
            return self.getToken(JackParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(JackParser.RBRACE, 0)

        def classVarDec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JackParser.ClassVarDecContext)
            else:
                return self.getTypedRuleContext(JackParser.ClassVarDecContext,i)


        def subRoutineDec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JackParser.SubRoutineDecContext)
            else:
                return self.getTypedRuleContext(JackParser.SubRoutineDecContext,i)


        def getRuleIndex(self):
            return JackParser.RULE_classDec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDec" ):
                listener.enterClassDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDec" ):
                listener.exitClassDec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDec" ):
                return visitor.visitClassDec(self)
            else:
                return visitor.visitChildren(self)




    def classDec(self):

        localctx = JackParser.ClassDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(JackParser.CLASS)
            self.state = 56
            self.className()
            self.state = 57
            self.match(JackParser.LBRACE)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==JackParser.FIELD or _la==JackParser.STATIC:
                self.state = 58
                self.classVarDec()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JackParser.CONSTRUCTOR) | (1 << JackParser.FUNCTION) | (1 << JackParser.METHOD))) != 0):
                self.state = 64
                self.subRoutineDec()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self.match(JackParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(JackParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return JackParser.RULE_className

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassName" ):
                listener.enterClassName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassName" ):
                listener.exitClassName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassName" ):
                return visitor.visitClassName(self)
            else:
                return visitor.visitChildren(self)




    def className(self):

        localctx = JackParser.ClassNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_className)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(JackParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassVarDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.kind = None # Token

        def typedVariable(self):
            return self.getTypedRuleContext(JackParser.TypedVariableContext,0)


        def SEMI(self):
            return self.getToken(JackParser.SEMI, 0)

        def STATIC(self):
            return self.getToken(JackParser.STATIC, 0)

        def FIELD(self):
            return self.getToken(JackParser.FIELD, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(JackParser.COMMA)
            else:
                return self.getToken(JackParser.COMMA, i)

        def varName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JackParser.VarNameContext)
            else:
                return self.getTypedRuleContext(JackParser.VarNameContext,i)


        def getRuleIndex(self):
            return JackParser.RULE_classVarDec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassVarDec" ):
                listener.enterClassVarDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassVarDec" ):
                listener.exitClassVarDec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassVarDec" ):
                return visitor.visitClassVarDec(self)
            else:
                return visitor.visitChildren(self)




    def classVarDec(self):

        localctx = JackParser.ClassVarDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_classVarDec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            localctx.kind = self._input.LT(1)
            _la = self._input.LA(1)
            if not(_la==JackParser.FIELD or _la==JackParser.STATIC):
                localctx.kind = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 75
            self.typedVariable()
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==JackParser.COMMA:
                self.state = 76
                self.match(JackParser.COMMA)
                self.state = 77
                self.varName()
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 83
            self.match(JackParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(JackParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return JackParser.RULE_varName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarName" ):
                listener.enterVarName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarName" ):
                listener.exitVarName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarName" ):
                return visitor.visitVarName(self)
            else:
                return visitor.visitChildren(self)




    def varName(self):

        localctx = JackParser.VarNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(JackParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubRoutineDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.kind = None # Token

        def subroutineName(self):
            return self.getTypedRuleContext(JackParser.SubroutineNameContext,0)


        def LPAREN(self):
            return self.getToken(JackParser.LPAREN, 0)

        def parameterList(self):
            return self.getTypedRuleContext(JackParser.ParameterListContext,0)


        def RPAREN(self):
            return self.getToken(JackParser.RPAREN, 0)

        def subroutineBody(self):
            return self.getTypedRuleContext(JackParser.SubroutineBodyContext,0)


        def CONSTRUCTOR(self):
            return self.getToken(JackParser.CONSTRUCTOR, 0)

        def FUNCTION(self):
            return self.getToken(JackParser.FUNCTION, 0)

        def METHOD(self):
            return self.getToken(JackParser.METHOD, 0)

        def VOID(self):
            return self.getToken(JackParser.VOID, 0)

        def typeName(self):
            return self.getTypedRuleContext(JackParser.TypeNameContext,0)


        def getRuleIndex(self):
            return JackParser.RULE_subRoutineDec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubRoutineDec" ):
                listener.enterSubRoutineDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubRoutineDec" ):
                listener.exitSubRoutineDec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubRoutineDec" ):
                return visitor.visitSubRoutineDec(self)
            else:
                return visitor.visitChildren(self)




    def subRoutineDec(self):

        localctx = JackParser.SubRoutineDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_subRoutineDec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            localctx.kind = self._input.LT(1)
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JackParser.CONSTRUCTOR) | (1 << JackParser.FUNCTION) | (1 << JackParser.METHOD))) != 0)):
                localctx.kind = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [JackParser.VOID]:
                self.state = 88
                self.match(JackParser.VOID)
                pass
            elif token in [JackParser.INT, JackParser.CHAR, JackParser.BOOLEAN, JackParser.IDENTIFIER]:
                self.state = 89
                self.typeName()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 92
            self.subroutineName()
            self.state = 93
            self.match(JackParser.LPAREN)
            self.state = 94
            self.parameterList()
            self.state = 95
            self.match(JackParser.RPAREN)
            self.state = 96
            self.subroutineBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubroutineNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(JackParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return JackParser.RULE_subroutineName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubroutineName" ):
                listener.enterSubroutineName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubroutineName" ):
                listener.exitSubroutineName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubroutineName" ):
                return visitor.visitSubroutineName(self)
            else:
                return visitor.visitChildren(self)




    def subroutineName(self):

        localctx = JackParser.SubroutineNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_subroutineName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(JackParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._typedVariable = None # TypedVariableContext
            self.params = list() # of TypedVariableContexts

        def typedVariable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JackParser.TypedVariableContext)
            else:
                return self.getTypedRuleContext(JackParser.TypedVariableContext,i)


        def COMMA(self):
            return self.getToken(JackParser.COMMA, 0)

        def getRuleIndex(self):
            return JackParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterList" ):
                return visitor.visitParameterList(self)
            else:
                return visitor.visitChildren(self)




    def parameterList(self):

        localctx = JackParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JackParser.INT) | (1 << JackParser.CHAR) | (1 << JackParser.BOOLEAN) | (1 << JackParser.IDENTIFIER))) != 0):
                self.state = 100
                localctx._typedVariable = self.typedVariable()
                localctx.params.append(localctx._typedVariable)

                self.state = 101
                self.match(JackParser.COMMA)
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JackParser.INT) | (1 << JackParser.CHAR) | (1 << JackParser.BOOLEAN) | (1 << JackParser.IDENTIFIER))) != 0):
                    self.state = 102
                    localctx._typedVariable = self.typedVariable()
                    localctx.params.append(localctx._typedVariable)
                    self.state = 107
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubroutineBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(JackParser.LBRACE, 0)

        def statements(self):
            return self.getTypedRuleContext(JackParser.StatementsContext,0)


        def RBRACE(self):
            return self.getToken(JackParser.RBRACE, 0)

        def varDec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JackParser.VarDecContext)
            else:
                return self.getTypedRuleContext(JackParser.VarDecContext,i)


        def getRuleIndex(self):
            return JackParser.RULE_subroutineBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubroutineBody" ):
                listener.enterSubroutineBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubroutineBody" ):
                listener.exitSubroutineBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubroutineBody" ):
                return visitor.visitSubroutineBody(self)
            else:
                return visitor.visitChildren(self)




    def subroutineBody(self):

        localctx = JackParser.SubroutineBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_subroutineBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(JackParser.LBRACE)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==JackParser.VAR:
                self.state = 111
                self.varDec()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 117
            self.statements()
            self.state = 118
            self.match(JackParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(JackParser.VAR, 0)

        def typedVariable(self):
            return self.getTypedRuleContext(JackParser.TypedVariableContext,0)


        def SEMI(self):
            return self.getToken(JackParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(JackParser.COMMA)
            else:
                return self.getToken(JackParser.COMMA, i)

        def varName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JackParser.VarNameContext)
            else:
                return self.getTypedRuleContext(JackParser.VarNameContext,i)


        def getRuleIndex(self):
            return JackParser.RULE_varDec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDec" ):
                listener.enterVarDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDec" ):
                listener.exitVarDec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDec" ):
                return visitor.visitVarDec(self)
            else:
                return visitor.visitChildren(self)




    def varDec(self):

        localctx = JackParser.VarDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_varDec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(JackParser.VAR)
            self.state = 121
            self.typedVariable()
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==JackParser.COMMA:
                self.state = 122
                self.match(JackParser.COMMA)
                self.state = 123
                self.varName()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 129
            self.match(JackParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedVariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(JackParser.TypeNameContext,0)


        def varName(self):
            return self.getTypedRuleContext(JackParser.VarNameContext,0)


        def getRuleIndex(self):
            return JackParser.RULE_typedVariable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedVariable" ):
                listener.enterTypedVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedVariable" ):
                listener.exitTypedVariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypedVariable" ):
                return visitor.visitTypedVariable(self)
            else:
                return visitor.visitChildren(self)




    def typedVariable(self):

        localctx = JackParser.TypedVariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_typedVariable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.typeName()
            self.state = 132
            self.varName()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(JackParser.INT, 0)

        def CHAR(self):
            return self.getToken(JackParser.CHAR, 0)

        def BOOLEAN(self):
            return self.getToken(JackParser.BOOLEAN, 0)

        def className(self):
            return self.getTypedRuleContext(JackParser.ClassNameContext,0)


        def getRuleIndex(self):
            return JackParser.RULE_typeName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeName" ):
                listener.enterTypeName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeName" ):
                listener.exitTypeName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeName" ):
                return visitor.visitTypeName(self)
            else:
                return visitor.visitChildren(self)




    def typeName(self):

        localctx = JackParser.TypeNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_typeName)
        try:
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [JackParser.INT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.match(JackParser.INT)
                pass
            elif token in [JackParser.CHAR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.match(JackParser.CHAR)
                pass
            elif token in [JackParser.BOOLEAN]:
                self.enterOuterAlt(localctx, 3)
                self.state = 136
                self.match(JackParser.BOOLEAN)
                pass
            elif token in [JackParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 4)
                self.state = 137
                self.className()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JackParser.StatementContext)
            else:
                return self.getTypedRuleContext(JackParser.StatementContext,i)


        def getRuleIndex(self):
            return JackParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = JackParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JackParser.LET) | (1 << JackParser.DO) | (1 << JackParser.IF) | (1 << JackParser.WHILE) | (1 << JackParser.RETURN))) != 0):
                self.state = 140
                self.statement()
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def letStatement(self):
            return self.getTypedRuleContext(JackParser.LetStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(JackParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(JackParser.WhileStatementContext,0)


        def doStatement(self):
            return self.getTypedRuleContext(JackParser.DoStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(JackParser.ReturnStatementContext,0)


        def getRuleIndex(self):
            return JackParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):
